--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
